LAP-150 - Fix error to login with client